fixed z-index

--- a/404/style.css
+++ b/404/style.css
@@ -173,7 +173,7 @@ a:active {
 
 .HamburgerMenu {
     display: none;
-
+    z-index: 99;
     flex-direction: column;
     flex-wrap: nowrap;
     position: fixed;
