--- a/AhlySC/style.css
+++ b/AhlySC/style.css
@@ -172,21 +172,21 @@ a:active {
 
 .HamburgerMenu {
     display: none;
-
+    z-index: 99;
     flex-direction: column;
     flex-wrap: nowrap;
     position: fixed;
-    background-color: #202324;
+    background-color: var(--red);
     margin-left: -8px;
     margin-top: 50px;
     width: 100vw;
     height: 100vh;
-    border: var(--yellow) solid 1px;
+    border: var(--gold) solid 1px;
 }
 
 .HamburgerMenu a {
     font-size: 50px;
-    border-bottom: #fcb315 solid 1px;
+    border-bottom: var(--gold) solid 1px;
 }
 
 @media screen and (max-width: 910px) {
