--- a/Convince/style.css
+++ b/Convince/style.css
@@ -167,7 +167,7 @@ a:active {
 
 .HamburgerMenu {
     display: none;
-
+    z-index: 99;
     flex-direction: column;
     flex-wrap: nowrap;
     position: fixed;
