--- a/Final/style.css
+++ b/Final/style.css
@@ -309,7 +309,7 @@ a:active {
 
 .HamburgerMenu {
     display: none;
-
+    z-index: 99;
     flex-direction: column;
     flex-wrap: nowrap;
     position: fixed;
