--- a/Nouns/style.css
+++ b/Nouns/style.css
@@ -176,7 +176,7 @@ a:active {
 
 .HamburgerMenu {
     display: none;
-
+    z-index: 99;
     flex-direction: column;
     flex-wrap: nowrap;
     position: fixed;
