--- a/Spot5Pro/style.css
+++ b/Spot5Pro/style.css
@@ -190,7 +190,7 @@ a:active {
 
 .HamburgerMenu {
     display: none;
-
+    z-index: 99;
     flex-direction: column;
     flex-wrap: nowrap;
     position: fixed;
